// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography exo Colors should render black exo font 1`] = `
<div
  className="sc-AxjAm kBatYO"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography exo Colors should render blue exo font 1`] = `
<div
  className="sc-AxjAm eTPBNi"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography exo Colors should render gray exo font 1`] = `
<div
  className="sc-AxjAm dfa-dQm"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography exo Colors should render green exo font 1`] = `
<div
  className="sc-AxjAm kxpAJd"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography exo Colors should render red exo font 1`] = `
<div
  className="sc-AxjAm hTKtVO"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography exo Colors should render white exo font 1`] = `
<div
  className="sc-AxjAm jGnDVe"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography exo Sizes & Colors combinations should render black large exo font 1`] = `
<div
  className="sc-AxjAm cowTHD"
  fontFamily="exo"
  size="large"
>
  Test
</div>
`;

exports[`Typography exo Sizes & Colors combinations should render black normal exo font 1`] = `
<div
  className="sc-AxjAm kBatYO"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography exo Sizes & Colors combinations should render blue large exo font 1`] = `
<div
  className="sc-AxjAm ebHQZj"
  fontFamily="exo"
  size="large"
>
  Test
</div>
`;

exports[`Typography exo Sizes & Colors combinations should render blue normal exo font 1`] = `
<div
  className="sc-AxjAm eTPBNi"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography exo Sizes & Colors combinations should render gray large exo font 1`] = `
<div
  className="sc-AxjAm bpqeif"
  fontFamily="exo"
  size="large"
>
  Test
</div>
`;

exports[`Typography exo Sizes & Colors combinations should render gray normal exo font 1`] = `
<div
  className="sc-AxjAm dfa-dQm"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography exo Sizes & Colors combinations should render green large exo font 1`] = `
<div
  className="sc-AxjAm cUMHOU"
  fontFamily="exo"
  size="large"
>
  Test
</div>
`;

exports[`Typography exo Sizes & Colors combinations should render green normal exo font 1`] = `
<div
  className="sc-AxjAm kxpAJd"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography exo Sizes & Colors combinations should render red large exo font 1`] = `
<div
  className="sc-AxjAm fOTfxj"
  fontFamily="exo"
  size="large"
>
  Test
</div>
`;

exports[`Typography exo Sizes & Colors combinations should render red normal exo font 1`] = `
<div
  className="sc-AxjAm hTKtVO"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography exo Sizes & Colors combinations should render white large exo font 1`] = `
<div
  className="sc-AxjAm hWtwtf"
  fontFamily="exo"
  size="large"
>
  Test
</div>
`;

exports[`Typography exo Sizes & Colors combinations should render white normal exo font 1`] = `
<div
  className="sc-AxjAm jGnDVe"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography exo Sizes should render large open sans font 1`] = `
<div
  className="sc-AxjAm fCMKPq"
  fontFamily="openSans"
  size="large"
>
  Test
</div>
`;

exports[`Typography exo Sizes should render normal open sans font 1`] = `
<div
  className="sc-AxjAm bYePpP"
  fontFamily="openSans"
  size="normal"
>
  Test
</div>
`;

exports[`Typography exo should render font 1`] = `
<div
  className="sc-AxjAm MwpTk"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography openSans Colors should render black exo font 1`] = `
<div
  className="sc-AxjAm kBatYO"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography openSans Colors should render blue exo font 1`] = `
<div
  className="sc-AxjAm eTPBNi"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography openSans Colors should render gray exo font 1`] = `
<div
  className="sc-AxjAm dfa-dQm"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography openSans Colors should render green exo font 1`] = `
<div
  className="sc-AxjAm kxpAJd"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography openSans Colors should render red exo font 1`] = `
<div
  className="sc-AxjAm hTKtVO"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography openSans Colors should render white exo font 1`] = `
<div
  className="sc-AxjAm jGnDVe"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography openSans Sizes & Colors combinations should render black large exo font 1`] = `
<div
  className="sc-AxjAm cowTHD"
  fontFamily="exo"
  size="large"
>
  Test
</div>
`;

exports[`Typography openSans Sizes & Colors combinations should render black normal exo font 1`] = `
<div
  className="sc-AxjAm kBatYO"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography openSans Sizes & Colors combinations should render blue large exo font 1`] = `
<div
  className="sc-AxjAm ebHQZj"
  fontFamily="exo"
  size="large"
>
  Test
</div>
`;

exports[`Typography openSans Sizes & Colors combinations should render blue normal exo font 1`] = `
<div
  className="sc-AxjAm eTPBNi"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography openSans Sizes & Colors combinations should render gray large exo font 1`] = `
<div
  className="sc-AxjAm bpqeif"
  fontFamily="exo"
  size="large"
>
  Test
</div>
`;

exports[`Typography openSans Sizes & Colors combinations should render gray normal exo font 1`] = `
<div
  className="sc-AxjAm dfa-dQm"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography openSans Sizes & Colors combinations should render green large exo font 1`] = `
<div
  className="sc-AxjAm cUMHOU"
  fontFamily="exo"
  size="large"
>
  Test
</div>
`;

exports[`Typography openSans Sizes & Colors combinations should render green normal exo font 1`] = `
<div
  className="sc-AxjAm kxpAJd"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography openSans Sizes & Colors combinations should render red large exo font 1`] = `
<div
  className="sc-AxjAm fOTfxj"
  fontFamily="exo"
  size="large"
>
  Test
</div>
`;

exports[`Typography openSans Sizes & Colors combinations should render red normal exo font 1`] = `
<div
  className="sc-AxjAm hTKtVO"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography openSans Sizes & Colors combinations should render white large exo font 1`] = `
<div
  className="sc-AxjAm hWtwtf"
  fontFamily="exo"
  size="large"
>
  Test
</div>
`;

exports[`Typography openSans Sizes & Colors combinations should render white normal exo font 1`] = `
<div
  className="sc-AxjAm jGnDVe"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography openSans Sizes should render large open sans font 1`] = `
<div
  className="sc-AxjAm fCMKPq"
  fontFamily="openSans"
  size="large"
>
  Test
</div>
`;

exports[`Typography openSans Sizes should render normal open sans font 1`] = `
<div
  className="sc-AxjAm bYePpP"
  fontFamily="openSans"
  size="normal"
>
  Test
</div>
`;

exports[`Typography openSans should render font 1`] = `
<div
  className="sc-AxjAm bYePpP"
  fontFamily="openSans"
  size="normal"
>
  Test
</div>
`;

exports[`Typography should render 1`] = `
<div
  className="sc-AxjAm htRihw"
  fontFamily={null}
  size="normal"
>
  Test
</div>
`;
